# astream

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/astream/: astream.h  audio_buffer.h  audio_chunk.h  audio_device.h  audio_file_descriptor.h  audio_stream.h  audio_stream_factory.h  audio_stream_settings.h  error.h
include/astream/backends/: iaudio_backend.h  port_audio_backend.h
include/astream/reader/: audio_reader.h
include/astream/reader/decoder/: iaudio_decoder.h  sndlib_audio_decoder.h
include/astream/reader/resampler/: iaudio_resampler.h  sr_audio_resampler.h
include/astream/stream/: ibasic_audio_stream.h  port_audio_stream.h
include/astream/utils/: generated_audio.h
include/libaudio/: audio_chunk.h  audio_device.h  audio_file_descriptor.h  audio_stream.h  audio_stream_settings.h
include/libaudio/backends/: iaudio_backend.h  port_audio_backend.h
include/libaudio/reader/resampler/: iaudio_resampler.h  sr_audio_resampler.h
include/libaudio/stream/: ibasic_audio_stream.h  port_audio_stream.h
libaudio/: audio_buffer.cpp  audio_chunk.cpp  audio_stream.cpp  audio_stream_factory.cpp
libaudio/backends/: port_audio_backend.cpp
libaudio/reader/: audio_reader.cpp
libaudio/reader/decoder/: sndlib_audio_decoder.cpp
libaudio/reader/resampler/: sr_audio_resampler.cpp
libaudio/stream/: port_audio_stream.cpp
scripts/: build.sh
src/: CMakeLists.txt  audio_buffer.cpp  audio_chunk.cpp  audio_stream.cpp  audio_stream_factory.cpp
src/backends/: port_audio_backend.cpp
src/reader/: audio_reader.cpp
src/reader/decoder/: sndlib_audio_decoder.cpp
src/reader/resampler/: sr_audio_resampler.cpp
src/stream/: port_audio_stream.cpp
src/utils/: generated_audio.cpp
tests/: CMakeLists.txt  test_audio_buffer.cpp  test_main.cpp
tests/backends/: test_port_audio_backend.cpp
tests/reader/: test_audio_reader.cpp
tests/stream/: test_audio_stream.cpp
